<resources>
    <string name="app_name">TCS Quiz</string>
    <string name="welcome_quiz">Welcome to TCS QUIZ!</string>
    <string name="about_tcs_quiz">TCS IT Wiz is an information technology quiz-based competition for India\'s high school students. It is held annually in India and the UAE by Tata Consultancy.  Let\'s begin! 10 Questions.. Enjoy!</string>
    <string name="question_1">1.This company got its name from Indian mythology. Which cab company is this?</string>
    <string name="ola">Ola</string>
    <string name="uber">Uber</string>
    <string name="meru">Meru</string>
    <string name="cabwala">Cabwala</string>
    <string name="question_2">2.Which word originally means \' a spirit of harmless,creative,Fun\'. Which now have a reverse meaning in the internet world ?</string>
    <string name="share">Share</string>
    <string name="crack">Crack</string>
    <string name="like">Like</string>
    <string name="hack">Hack</string>
    <string name="question_3">3.Name the company which was founded by Toshio Lue and owned by Panasonic whose name means \'Three Oceans\'. Because they want to spread their products across Pacific, Atlantic and Indian ocean. [Hint:Old generation people know about it]</string>
    <string name="sony">Sony</string>
    <string name="sanyo">Sanyo</string>
    <string name="samsung">Samsung</string>
    <string name="nokia">Nokia</string>
    <string name="question_4">4.Identify the logo</string>
    <string name="answer_here">Answer here…</string>
    <string name="question_5">5.In HTTP , if HT stands for Hypertext. Then what does TP stands for ?</string>
    <string name="testing_protocol">Testing Protocol</string>
    <string name="transfer_protocol">Transfer Protocol</string>
    <string name="transmitting_protocol">Transmitting Protocol</string>
    <string name="texting_protocol">Texting Protocol</string>
    <string name="question_6">6.If \'The Everything Store\' is a book about Amazon. Then \'The Perfect Store\' is about?</string>
    <string name="ebay">eBay</string>
    <string name="walmart">Walmart</string>
    <string name="snapdeal">Snapdeal</string>
    <string name="question_7">7.Identify this logo which you see in the jersey of Delhi Dynamos</string>
    <string name="flipkart">Flipkart</string>
    <string name="federal_bank">Federal Bank</string>
    <string name="freecharge">Freecharge</string>
    <string name="question_8">8.Which company manufactured the first smartphone Simon?</string>
    <string name="ibm">IBM</string>
    <string name="apple">Apple</string>
    <string name="microsoft">Microsoft</string>
    <string name="question_9">9.Which of the services are provided by Google?</string>
    <string name="drive">Drive</string>
    <string name="facebook">Facebook</string>
    <string name="maps">Maps</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="submit_answers">SUBMIT ANSWERS</string>
    <string name="reset">RESET</string>
    <string name="k">K - -</string>
    <string name="f_logo">f logo</string>
    <string name="tcs_logo_desc">tcs quiz logo</string>
    <string name="kik">kik</string>
</resources>
