<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:padding="10dp"
    tools:context="quizapp.diyandroid.com.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/tcs_logo_desc"
            android:foreground="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_quiz"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/about_tcs_quiz"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question_1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ola" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uber" />

            <RadioButton
                android:id="@+id/rcorrect_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meru" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabwala" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_2"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crack" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like" />

            <RadioButton
                android:id="@+id/rcorrect_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hack" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_3"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sony" />

            <RadioButton
                android:id="@+id/rcorrect_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanyo" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samsung" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nokia" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_4"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/k"
            android:padding="20dp"
            android:src="@drawable/kik" />

        <EditText
            android:id="@+id/type_question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/answer_here"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_5"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testing_protocol" />

            <RadioButton
                android:id="@+id/rcorrect_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_protocol" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transmitting_protocol" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texting_protocol" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_6"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:id="@+id/rcorrect_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ebay" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flipkart" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walmart" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snapdeal" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_7"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/f_logo"
            android:padding="30dp"
            android:src="@drawable/freecharge" />

        <RadioGroup
            android:id="@+id/question_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flipkart" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/federal_bank" />

            <RadioButton
                android:id="@+id/rcorrect_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freecharge" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_8"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/question_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samsung" />

            <RadioButton
                android:id="@+id/rcorrect_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ibm" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/microsoft" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/question_9"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/question_9_box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive" />

        <CheckBox
            android:id="@+id/question_9_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />

        <CheckBox
            android:id="@+id/question_9_box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maps" />

        <CheckBox
            android:id="@+id/question_9_box4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                style="@android:style/ButtonBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:padding="8dp"
                android:text="@string/submit_answers" />

            <Button
                android:id="@+id/reset"
                style="@android:style/ButtonBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:padding="8dp"
                android:text="@string/reset" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
